--- a/src/app/components/elements/AuthorDropdown.scss
+++ b/src/app/components/elements/AuthorDropdown.scss
@@ -19,8 +19,8 @@
     .Userpic {
         margin-right: 1rem;
         float: left;
-        width:75px;
-        height:75px;
+        width: 5.3125rem;
+        height: 5.3125rem;
     }
 
     .Author__name {
