--- a/src/app/components/pages/PostsIndex.scss
+++ b/src/app/components/pages/PostsIndex.scss
@@ -692,8 +692,8 @@ a#changeLayout:focus {
       &__summary {
         border: transparent;
         box-shadow: none;
-        padding-bottom: 0px;
-        margin: 0 0 1.4em;
+        padding-bottom: 0.5rem;
+        margin: 0 0 1.25em;
         @include themify($themes) {
           border-bottom: themed('borderLight'); 
         } 
@@ -702,7 +702,7 @@ a#changeLayout:focus {
         }
       }
       &__h2 {
-        @include font-size(16px);  
+        @include font-size(24px);  
 
         @include MQ(M) {
           -webkit-line-clamp: 2;
@@ -710,33 +710,30 @@ a#changeLayout:focus {
         @include MQ(XL) {
           -webkit-line-clamp: 1;
         }
-
+        margin-bottom: 0.5rem;
       }
       &__feature-img-container {
         overflow: hidden;
-        width: 130px;
-        height: 77px;
+        width: 220px;
+        height: 130px;
         position: relative;
         display: inline-block;
       }
       &__feature-img {
         position: absolute;
-        width:100% !important;   
+        width: 100% !important;   
         top: 50%;
-        transform:translateY(-50%)
+        transform: translateY(-50%);
       }
       &__summary-header {
         padding: 2px 0 5px;
+        margin-bottom: 0.5rem;
         border: transparent;
       }
       &__summary-footer {
-        padding: 2px 0 5px;
         border: transparent;
         padding: 4px;
-        padding-top: 3px;
-        // @include themify($themes) {
-        //     border-bottom: themed('borderLight'); 
-        //   }           
+        margin-top: 0.75rem;
       }     
       &__p {
         @include font-size(15px);       
@@ -808,8 +805,8 @@ a#changeLayout:focus {
 
 
 .layout-list .user .Userpic {
-  width: 24px !important;
-  height: 24px !important;
+  width: 2rem !important;
+  height: 2rem !important;
   margin-right: 7px;
 }
 
