--- a/src/app/components/modules/Header.scss
+++ b/src/app/components/modules/Header.scss
@@ -52,8 +52,7 @@
   }
   li.submit-story > a {
     @extend .e-btn;
-    margin-right: 22px;
-    margin-left: 16px;
+    margin: 0.4rem 1.375rem 0 1rem;
   }
   a {
     @extend .link;
@@ -65,13 +64,19 @@
 .Header__top {
   // background-color: $white;
   
-  padding: 0.25rem 0;
+  padding: 0.5rem 0 0.25rem 0;
   transition: all 0.3s ease-out;
   @media print, screen and (min-width: 52.5em) {
-    padding: 0.75rem 0;
+    padding: 1rem 0;
   }
   ul > li.Header__top-logo {
     padding: .35rem 0 .35rem 0;
+    img {
+      height: 3rem !important;
+      width: auto !important;
+      position: relative;
+      top: -0.2rem;
+    }
   }
   ul > li.delim {
     color: $medium-gray;
