--- a/src/app/components/cards/Comment.scss
+++ b/src/app/components/cards/Comment.scss
@@ -100,6 +100,7 @@
 
 .Comment__footer {
   margin-left: 62px;
+  margin-top: 0.5rem;
   @include themify($themes) {
     color: themed('textColorPrimary');
   }
