Fixed the look of markdown text in single posts (more space, more contrast)

--- a/src/app/assets/stylesheets/_themes.scss
+++ b/src/app/assets/stylesheets/_themes.scss
@@ -121,7 +121,7 @@ $themes: (
     borderTransparent: transparent,
     iconColorSecondary: #cacaca,
     textColorPrimary: $color-text-darker,
-    textColorSecondary: $color-text-gray,
+    textColorSecondary: $color-text-gray-darker,
     textColorAccent: $color-lightblue,   
     textColorAccentHover: $color-lightblue-darker, 
     textColorError: $color-text-red,
