--- a/src/app/components/modules/LoginForm.scss
+++ b/src/app/components/modules/LoginForm.scss
@@ -23,8 +23,8 @@
     @include font-size(16px);
     
     &:hover {
-      border: 1px solid $color-teal-dark;
-      color: $color-teal-dark;
+      border: 1px solid $color-lightblue-darker;
+      color: $color-lightblue-darker;
       box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);
     }
   }
