--- a/src/app/assets/stylesheets/_themes.scss
+++ b/src/app/assets/stylesheets/_themes.scss
@@ -131,7 +131,7 @@ $themes: (
     buttonText: $color-text-white,
     buttonTextShadow: 0 1px 0 rgba(0,0,0,0.20),
     buttonTextHover: $color-white,
-    buttonBoxShadow: $color-lightblue-darker,
+    buttonBoxShadow: $color-blue-black,
     buttonBoxShadowHover: $color-brightblue,    
   ),
 );
