hotfix: logo not found

--- a/src/app/assets/static/search.html
+++ b/src/app/assets/static/search.html
@@ -92,7 +92,7 @@
             height: auto;
             display: block;
             height: auto;
-        }    
+        }
       .logo-new .icon-svg {
           fill: #06D6A9;
           transition: 0.2s all ease-in-out;
@@ -112,9 +112,7 @@
         <div class="columns">
             <ul class="menu">
                 <li class="logo">
-                    <a href="/">
-                    <img src="/images/logo.png" />
-                    </a>
+                    <a href="/"><img src="/images/logo.png" /></a>
                 </li>
             </ul>
         </div>
