Updated color gamma, night color mode, plus minor fixes

--- a/src/app/assets/static/search.html
+++ b/src/app/assets/static/search.html
@@ -125,15 +125,15 @@
     </div>
 </div>
 <script>
-    (function() {
-        var cx = '011445933062884569876:-jmpkfnkicw';
-        var gcse = document.createElement('script');
-        gcse.type = 'text/javascript';
-        gcse.async = true;
-        gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(gcse, s);
-    })();
+  (function() {
+    var cx = '011723639557098137375:0a16gqowrtw';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
 </script>
 </body>
 </html>
