--- a/src/app/assets/stylesheets/_variables.scss
+++ b/src/app/assets/stylesheets/_variables.scss
@@ -4,9 +4,10 @@ $color-white: #fff;
 $color-black: #000;
 $color-red: #ff0264;
 
-$color-lightblue: #67b9e5;
-$color-lightblue-darker: #56b1e7;
-$color-brightblue: #448ffe;
+$color-lightblue: #4490d9;
+$color-darkblue: #2d5b8f;
+$color-brightblue: #1c99ff;
+$color-brightblue-light: #41abff;
 
 $color-blue: #004EFF;
 $color-blue-original-dark: #1A5099;
