--- a/src/app/components/modules/SidePanel.scss
+++ b/src/app/components/modules/SidePanel.scss
@@ -24,7 +24,7 @@ $menu-width: 250px;
       }
       > a:hover, &:focus {
         background-color:  $color-blue-black;
-        border-bottom: 1px solid $color-teal;
+        border-bottom: 1px solid $color-brightblue;
 
         path {
           fill: $color-teal;     
