--- a/src/app/components/pages/Post.scss
+++ b/src/app/components/pages/Post.scss
@@ -35,6 +35,9 @@
   max-width: 60rem;
   margin: 0 auto 3.5rem;
   font-size: 92%;
-  background-color: whitesmoke;
   padding: 2rem 3rem 1rem 3rem;
+}
+
+.theme-wls-light .Post_comments__content {
+  background-color: whitesmoke;
 }
