--- a/src/app/assets/stylesheets/_themes.scss
+++ b/src/app/assets/stylesheets/_themes.scss
@@ -1,109 +1,8 @@
 $themes: (
-  original: (
-    colorAccent: $color-blue,
-    colorAccentHover: $color-blue-original-light,
-    colorAccentReverse: $color-blue-original-light,
-    colorWhite: $color-white,
-    backgroundColor: $color-background-off-white,
-    backgroundColorOpaque: $color-background-off-white,
-    backgroundTransparent: transparent,
-    moduleBackgroundColor: $color-white,
-    menuBackgroundColor: $color-background-dark,
-    moduleMediumBackgroundColor: $color-white,
-    navBackgroundColor: $color-white,
-    highlightBackgroundColor: #f3faf0,
-    tableRowEvenBackgroundColor: #f4f4f4,
-    border: 1px solid $color-border-light,
-    borderLight: 1px solid $color-border-light-lightest,
-    borderDark: 1px solid $color-text-gray,
-    borderAccent: 1px solid $color-blue,
-    borderTransparent: transparent,
-    iconColorSecondary: #cacaca,
-    textColorPrimary: $color-text-dark,
-    textColorSecondary: $color-text-gray,
-    textColorAccent: $color-text-blue,
-    textColorAccentHover: $color-blue-original-dark,
-    textColorError: $color-text-red,
-    contentBorderAccent: $color-transparent,
-    buttonBackground: $color-blue-original-dark,
-    buttonBackgroundHover: $color-blue-original-light,
-    buttonText: $color-text-white,
-    buttonTextShadow: 0 1px 0 rgba(0,0,0,0.20),
-    buttonTextHover: $color-text-white,
-    buttonBoxShadow: $color-transparent,        
-  ),
-  light: (
-    colorAccent: $color-teal,
-    colorAccentHover: $color-teal-dark,
-    colorAccentReverse: $color-blue-black,
-    colorWhite: $color-white,
-    backgroundColor: $color-background-off-white,
-    backgroundColorOpaque: $color-background-off-white,    
-    backgroundTransparent: transparent,
-    moduleBackgroundColor: $color-white,
-    menuBackgroundColor: $color-background-dark,
-    moduleMediumBackgroundColor: $color-transparent,
-    navBackgroundColor: $color-white,
-    highlightBackgroundColor: #f3faf0,
-    tableRowEvenBackgroundColor: #f4f4f4,
-    border: 1px solid $color-border-light,
-    borderLight: 1px solid $color-border-light-lightest,
-    borderDark: 1px solid $color-text-gray,
-    borderAccent: 1px solid $color-teal,
-    borderTransparent: transparent,
-    iconColorSecondary: #cacaca,
-    textColorPrimary: $color-text-dark,
-    textColorSecondary: $color-text-gray,
-    textColorAccent: $color-text-teal,   
-    textColorAccentHover: $color-teal, 
-    textColorError: $color-text-red,
-    contentBorderAccent: $color-teal,
-    buttonBackground: $color-blue-black,
-    buttonBackgroundHover: $color-teal,
-    buttonText: $color-text-white,
-    buttonTextShadow: 0 1px 0 rgba(0,0,0,0.20),
-    buttonTextHover: $color-white,
-    buttonBoxShadow: $color-teal,
-    buttonBoxShadowHover: $color-blue-black,    
-  ),
-  dark: (
-    colorAccent: $color-teal,
-    colorAccentHover: $color-teal,
-    colorAccentReverse: $color-white,
-    colorWhite: $color-white,
-    backgroundColor: $color-background-dark,
-    backgroundColorOpaque: $color-blue-dark,
-    moduleBackgroundColor: $color-background-dark,
-    backgroundTransparent: transparent,
-    menuBackgroundColor: $color-blue-dark,
-    moduleMediumBackgroundColor: $color-background-dark,
-    navBackgroundColor: $color-background-dark,
-    highlightBackgroundColor: $color-blue-black-darkest,
-    tableRowEvenBackgroundColor: #212C33,
-    border: 1px solid $color-border-dark,
-    borderLight: 1px solid $color-border-dark-lightest,
-    borderDark: 1px solid $color-text-gray-light,
-    borderAccent: 1px solid $color-teal,
-    borderTransparent: transparent,
-    iconColorSecondary: $color-text-gray-light,
-    textColorPrimary: $color-text-white,
-    textColorSecondary: $color-text-gray-light,
-    textColorAccent: $color-teal,
-    textColorAccentHover: $color-teal-light,
-    textColorError: $color-text-red,
-    contentBorderAccent: $color-teal,
-    buttonBackground: $color-white,
-    buttonBackgroundHover: $color-teal,
-    buttonText: $color-blue-dark,
-    buttonTextShadow: 0 1px 0 rgba(0,0,0,0),
-    buttonTextHover: $color-white,
-    buttonBoxShadow: $color-teal,
-    buttonBoxShadowHover: $color-white,
-  ),
-  wls: (
+  wls-light: (
     colorAccent: $color-lightblue,
-    colorAccentHover: $color-teal-dark,
-    colorAccentReverse: $color-blue-black,
+    colorAccentHover: $color-brightblue-light,
+    colorAccentReverse: $color-darkblue,
     colorWhite: $color-white,
     backgroundColor: $color-background-off-white,
     backgroundColorOpaque: $color-background-off-white,    
@@ -112,7 +11,7 @@ $themes: (
     menuBackgroundColor: $color-background-dark,
     moduleMediumBackgroundColor: $color-transparent,
     navBackgroundColor: $color-white,
-    highlightBackgroundColor: #f3faf0,
+    highlightBackgroundColor: #dff1fd,
     tableRowEvenBackgroundColor: #f4f4f4,
     border: 1px solid $color-border-light,
     borderLight: 1px solid $color-border-light-lightest,
@@ -123,7 +22,7 @@ $themes: (
     textColorPrimary: $color-text-darker,
     textColorSecondary: $color-text-gray-darker,
     textColorAccent: $color-lightblue,   
-    textColorAccentHover: $color-lightblue-darker, 
+    textColorAccentHover: $color-brightblue, 
     textColorError: $color-text-red,
     contentBorderAccent: $color-lightblue,
     buttonBackground: $color-brightblue,
@@ -133,6 +32,40 @@ $themes: (
     buttonTextHover: $color-white,
     buttonBoxShadow: $color-blue-black,
     buttonBoxShadowHover: $color-brightblue,    
+  ),
+  wls-dark: (
+    colorAccent: $color-lightblue,
+    colorAccentHover: $color-lightblue,
+    colorAccentReverse: $color-white,
+    colorWhite: $color-white,
+    backgroundColor: $color-background-dark,
+    backgroundColorOpaque: $color-darkblue,
+    moduleBackgroundColor: $color-background-dark,
+    backgroundTransparent: transparent,
+    menuBackgroundColor: $color-darkblue,
+    moduleMediumBackgroundColor: $color-background-dark,
+    navBackgroundColor: $color-background-dark,
+    highlightBackgroundColor: $color-blue-black-darkest,
+    tableRowEvenBackgroundColor: #212C33,
+    border: 1px solid $color-border-dark,
+    borderLight: 1px solid $color-border-dark-lightest,
+    borderDark: 1px solid $color-text-gray-light,
+    borderAccent: 1px solid $color-lightblue,
+    borderTransparent: transparent,
+    iconColorSecondary: $color-text-gray-light,
+    textColorPrimary: $color-text-white,
+    textColorSecondary: $color-text-gray-light,
+    textColorAccent: $color-lightblue,
+    textColorAccentHover: $color-brightblue,
+    textColorError: $color-text-red,
+    contentBorderAccent: $color-lightblue,
+    buttonBackground: $color-white,
+    buttonBackgroundHover: $color-brightblue,
+    buttonText: $color-blue-dark,
+    buttonTextShadow: 0 1px 0 rgba(0,0,0,0),
+    buttonTextHover: $color-white,
+    buttonBoxShadow: $color-lightblue,
+    buttonBoxShadowHover: $color-white,
   ),
 );
 
@@ -158,30 +91,16 @@ $themes: (
 }
 
 
-  .theme-original {
-    background-color: $white; 
-    color: $color-text-dark;
-    @include MQ(M) {
-      background-color: $color-background-off-white; 
-    }
-  }
-  .theme-light {
-    background-color: $white; 
-    color: $color-text-dark;
-    @include MQ(M) {
-      background-color: $color-background-off-white; 
-    }    
-  }
-  .theme-dark {
-    background-color: $color-background-dark; 
-    color: $color-text-white;
-  }
-  .theme-wls {
+  .theme-wls-light {
     background-color: $white; 
     color: $color-text-darker;
     @include MQ(M) {
       background-color: $color-background-off-white; 
     }    
+  }
+  .theme-wls-dark {
+    background-color: $color-background-dark; 
+    color: $color-text-white;
   }
 
 
