--- a/src/app/assets/stylesheets/foundation-overrides.scss
+++ b/src/app/assets/stylesheets/foundation-overrides.scss
@@ -17,7 +17,7 @@
   .VerticalMenu {
     a:hover {
       background-color: #f6f6f6;
-      color: $color-teal-dark;
+      color: $color-blue-dark;
     }     
   }
 }
@@ -109,7 +109,7 @@ tbody tr:nth-child(even) {
 }
 
 .reveal {
-  box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.1), 7px 7px 0 0 $color-lightblue-darker;   
+  box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.1), 7px 7px 0 0 $color-brightblue;   
   border-radius: 0;
   border: transparent;
   transition: 0.2s all ease-in-out;
