Fixed progress bar color in new account

--- a/src/app/components/pages/CreateAccount.scss
+++ b/src/app/components/pages/CreateAccount.scss
@@ -17,7 +17,7 @@
     background-color: #eee;
   }
   .progress .progress-meter {
-    background-color: $color-teal; 
+    background-color: $color-brightblue; 
   }
   p {
     line-height: 1.3;
