--- a/src/app/assets/stylesheets/_themes.scss
+++ b/src/app/assets/stylesheets/_themes.scss
@@ -31,7 +31,11 @@ $themes: (
     buttonTextShadow: 0 1px 0 rgba(0,0,0,0.20),
     buttonTextHover: $color-white,
     buttonBoxShadow: $color-blue-black,
-    buttonBoxShadowHover: $color-brightblue,    
+    buttonBoxShadowHover: $color-brightblue,
+    buttonUpvoteStroke: $color-brightblue,
+    buttonUpvoteStrokeHover: $color-white,
+    buttonUpvoteFill: $color-white,
+    buttonUpvoteFillHover: $color-brightblue,
   ),
   wls-dark: (
     colorAccent: $color-lightblue,
@@ -66,6 +70,10 @@ $themes: (
     buttonTextHover: $color-white,
     buttonBoxShadow: $color-lightblue,
     buttonBoxShadowHover: $color-white,
+    buttonUpvoteStroke: $color-brightblue,
+    buttonUpvoteStrokeHover: $color-white,
+    buttonUpvoteFill: $color-white,
+    buttonUpvoteFillHover: $color-brightblue,
   ),
 );
 
