--- a/src/app/components/pages/PostsIndex.scss
+++ b/src/app/components/pages/PostsIndex.scss
@@ -171,35 +171,20 @@
 }
 
 .PostsIndex.row {
-  max-width: 860px;
   display: flex;
   flex-wrap: nowrap;
-  margin: 0 auto;
-  @include MQ(L) {
-    max-width: 1240px;
-  }
+  justify-content: center;
 }
-
-
-
-
-.PostsIndex.row.layout-list {
-  max-width: none;
-  @include MQ(L) {
-    max-width: 1600px;
-  }
-}
-
 
 .articles {
-    font-family: helvetica, sans-serif;
-    padding: 1em;
-    transition: all 0.2s ease-out;
-    border: transparent;
-    min-width: 300px;
-    max-width: 540px;
-    margin: auto;
-    background-color: transparent;
+  font-family: helvetica, sans-serif;
+  padding: 1em;
+  transition: all 0.2s ease-out;
+  border: transparent;
+  min-width: 300px;
+  max-width: 540px;
+  margin: auto;
+  background-color: transparent;
   
   @include MQ(M) {
     margin: 0 1em;
@@ -666,7 +651,7 @@ a#changeLayout:focus {
       &--right {
         display: none;
         order: 3;
-        @include MQ(L) {
+        @include MQ(M) {
           display: block;
           margin-right: 1em;
         }
@@ -748,6 +733,9 @@ a#changeLayout:focus {
         display: flex;
         align-items: top;
         flex-wrap: wrap;
+        @include MQ(L) {
+          flex-wrap: nowrap;
+        }
       }
       &__content-block {
         margin-bottom: 0;
