added testnet page

--- a/src/app/components/all.scss
+++ b/src/app/components/all.scss
@@ -56,6 +56,7 @@
 @import "./pages/CreateAccount";
 @import "./pages/Post";
 @import "./pages/Privacy";
+@import "./pages/Testnet";
 @import "./pages/Tos";
 @import "./pages/UserProfile";
 @import "./pages/TagsIndex";
