--- a/src/app/components/pages/PostsIndex.scss
+++ b/src/app/components/pages/PostsIndex.scss
@@ -128,10 +128,19 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    
   }
   &__list-item {
     margin-bottom: 10px;
     line-height: 1.2;
+    font-size: 0.875rem;
+    line-height: 1.2;
+    
+    a {
+      @extend .link;
+      @extend .link--secondary;
+    }
+    
     &:last-child {
       margin-bottom: 0;
     }
@@ -142,9 +151,13 @@
     font-weight: bold;
     @include font-size(18px); 
     margin: 0 0 16px 0;   
+    
     &--inline {
       display: inline;
     }
+  }
+  .multiple > &__h3 {
+    margin-top: 1rem;
   }
   &__link {
     @extend .link;  
