--- a/src/app/assets/static/search.html
+++ b/src/app/assets/static/search.html
@@ -77,8 +77,8 @@
             height: 2rem;
             width: 2rem;
         }
-        div.search-content {
-            margin-top: 3rem;
+        .search-content {
+            margin-top: 7rem;
             margin-bottom: 3rem;
             border: 1px solid #eee;
             background-color: white;
@@ -120,7 +120,6 @@
 </div>
 <div class="row medium-8 large-7 search-content">
     <div class="columns">
-        <br />
         <gcse:search linktarget="_self"></gcse:search>
     </div>
 </div>
