--- a/src/app/assets/stylesheets/_variables.scss
+++ b/src/app/assets/stylesheets/_variables.scss
@@ -44,3 +44,8 @@ $color-border-dark-lightest: #2B3A45;
 $font-primary: helvetica, sans-serif;
 
 $alert-color: $color-red;
+
+/* transition to the new color theme */
+
+$color-ocean: #2b78d6;
+$color-moon: #d8d8d8;
