--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -1,31 +1,29 @@
 .App {
   min-height: 100vh;
   padding-top: 4.25rem;
+  
+  &.RootCreateAccount {
+    background-color: $color-white;
+    @include MQ(M) {
+      background-color: $color-background-off-white;
+    }
+  }
 }
 
 .App__content {
     margin-top: 1rem;
 
-    @media print, screen and (min-width: 52.5em) {
-      margin-top: 2.5rem;
+    @include MQ(ML) {
+      margin-top: 2.75rem;
     }
-    
-    // /* Small only */
-    // @media screen and (max-width: 39.9375em) {
-    //     margin-top: 2.25rem;
-    // }
-    // /* Medium only */
-    // @media screen and (min-width: 40em) and (max-width: 63.9375em) {
-    //     margin-top: 3rem;
-    // }
-    // /* Large and above */
-    // @media screen and (min-width: 64.063em) {
-    //     margin-top: 3rem;
-    
 }
 
-.mini-header .App__content {
-  margin-top: 5rem;
+.mini-header .App__content  {
+  margin-top: 0;
+  
+  @include MQ(ML) {
+    margin-top: 2.25rem;
+  }  
 }
 
 .RightMenu {
